<resources>
    <string name="app_name">Doctoruim</string>
    <string name="subtitle">Subtitle</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Full Name</string>
...
